# autoscript-data-automation

./: .gitignore  DESCRICAO_FREELANCE.md  INSTRUCOES_GITHUB.md
executor_gui_english/: CASE_STUDY.md  DESCRICAO_FREELANCE.md  main.py  pyproject.toml
executor_gui_english/docs/: COMPILACAO.md  DESENVOLVIMENTO.md  INSTALACAO.md  README.md
executor_gui_english/executor_gui_english/: AutoScript.spec  requirements.txt
executor_gui_english/executor_gui_english/scripts/: run.sh
executor_gui_english/scripts/: build.py
executor_gui_english/src/: config.py
executor_gui_english/src/core/: __init__.py  file_handler.py  module_loader.py  validators.py
executor_gui_english/src/modules/comparacao/: comparacao_modulo.py
executor_gui_english/src/modules/conciliacao/: conciliacao_modulo.py
executor_gui_english/src/modules/marcar_usuarios/: marcar_usuarios_modulo.py
executor_gui_english/src/modules/pedidos/: extrair_detalhados_v9.py  processar_pedidos.py
executor_gui_english/src/modules/rifa/: rifa_modulo.py
executor_gui_english/src/ui/: __init__.py  main_window.py  tabs.py  widgets.py
src/: __init__.py  config.py  main.py
src/core/: file_handler.py
src/modules/pedidos/: processar_pedidos.py
src/modules/rifa/: rifa_modulo.py
src/ui/: main_window.py  tabs.py  widgets.py
