[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "executor-gui"
version = "7.0.0"
description = "AutoScript - Executor de Scripts para processamento de dados"
readme = "docs/README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "João Victor Cotrim", email = "joaocotrimprofi@gmail.com"}
]

dependencies = [
    "pandas>=1.5.0",
    "openpyxl>=3.0.0",
    "numpy>=1.23.0",
    "PyMuPDF>=1.21.0",
    "Pillow>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]

build = [
    "PyInstaller>=5.0",
]

[project.scripts]
executor-gui = "src.main:main"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
